<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormStorageActivity">


    <CheckBox
        android:id="@+id/formstorage_form_type_worksheet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:checked="true"
        android:text="@string/formstorage_form_type_worksheet"
        android:onClick="toggleWS"
        app:layout_constraintEnd_toEndOf="@+id/formsList"
        app:layout_constraintStart_toEndOf="@+id/formstorage_form_type_timesheet_button"
        app:layout_constraintTop_toTopOf="@+id/formstorage_form_type_timesheet_button" />

    <TextView
        android:id="@+id/form_storage_form_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/formstorage_select_form_type"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/new_item_label"
        app:layout_constraintTop_toBottomOf="@+id/new_item_label" />

    <TextView
        android:id="@+id/new_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/formstorage_label"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/formstorage_form_type_timesheet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:checked="true"
        android:onClick="toggleTS"
        android:text="@string/formstorage_form_type_timesheet"
        app:layout_constraintBottom_toBottomOf="@+id/form_storage_form_type_label"
        app:layout_constraintStart_toEndOf="@+id/form_storage_form_type_label"
        app:layout_constraintTop_toTopOf="@+id/form_storage_form_type_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/formsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_storage_form_type_label" />

</androidx.constraintlayout.widget.ConstraintLayout>