<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/timesheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timesheet_button_text"
            app:layout_column="0"
            app:layout_row="0"
            android:onClick="timesheet"
            />

        <Button
            android:id="@+id/worksheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worksheet_button_text"
            app:layout_column="1"
            app:layout_row="0"
            android:onClick="worksheet"/>

        <Button
            android:id="@+id/workorder_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workorder_button_text"
            app:layout_column="0"
            app:layout_row="1"
            android:onClick="workOrder"/>

        <Button
            android:id="@+id/inventory_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_button_text"
            app:layout_column="1"
            app:layout_row="1"
            android:onClick="inventory"/>

        <Button
            android:id="@+id/form_storage_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formstorage_button_text"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="153dp"
            app:layout_column="0"
            app:layout_row="2"
            android:onClick="formStorage"/>


    </androidx.gridlayout.widget.GridLayout>

    <ImageView
        android:id="@+id/colonial_logo_main_menu"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/colonial" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="725dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icons8_question_mark_24"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="725dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icons8_clipboard_24"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="727dp" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icons8_home_24"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="727dp" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icons8_time_24"
        tools:layout_editor_absoluteX="304dp"
        tools:layout_editor_absoluteY="726dp" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="39dp"
        android:layout_height="28dp"
        app:srcCompat="@drawable/icons8_filing_cabinet_50"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="735dp" />


</androidx.constraintlayout.widget.ConstraintLayout>